--- a/css/thomasgutierrez.webflow.css
+++ b/css/thomasgutierrez.webflow.css
@@ -510,6 +510,121 @@
   bottom: 0%;
 }
 
+.columns {
+  height: 90vh;
+  margin-top: 120px;
+}
+
+.pacmencolumn {
+  height: 100%;
+  background-image: url('../images/61cae6e937cb6.jpeg');
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.button {
+  margin: 20px 10px 20px 20px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
+  font-weight: 700;
+}
+
+.heading-5 {
+  margin-right: 20px;
+  margin-left: 20px;
+  color: #fff;
+  font-size: 100px;
+  line-height: 100px;
+  letter-spacing: -5px;
+}
+
+.buttonprojectgithub {
+  margin: 20px 20px 20px 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #000;
+  font-weight: 700;
+}
+
+.paragraph-2 {
+  margin: 20px;
+  color: hsla(0, 0%, 100%, 0.5);
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.eyeeyecolumn {
+  height: 100%;
+  background-image: url('../images/eye.jpeg');
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.bustrackcolumn {
+  height: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  background-image: url('../images/subway-map.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.column {
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.column-2 {
+  padding-top: 20px;
+}
+
+.column-3 {
+  padding-top: 20px;
+}
+
+.container-4 {
+  display: block;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: right;
+}
+
+.text-block-2 {
+  position: relative;
+  display: inline-block;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  color: hsla(0, 0%, 100%, 0.5);
+  text-transform: capitalize;
+}
+
+.footerbrandheading {
+  display: block;
+  margin: 0px 20px;
+  color: hsla(0, 0%, 100%, 0.5);
+  font-size: 30px;
+  line-height: 30px;
+  text-align: left;
+}
+
 @media screen and (max-width: 991px) {
   .navigationelement {
     margin-right: 40px;
@@ -921,5 +1036,9 @@
     font-size: 50px;
     line-height: 50px;
     letter-spacing: -5px;
+  }
+
+  .footerbrandheading {
+    margin: 20px 0px 20px 20px;
   }
 }
