--- a/css/thomasgutierrez.webflow.css
+++ b/css/thomasgutierrez.webflow.css
@@ -511,8 +511,15 @@
 }
 
 .columns {
-  height: 90vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: 120px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .pacmencolumn {
@@ -541,7 +548,7 @@
 }
 
 .buttonprojectgithub {
-  margin: 20px 20px 20px 10px;
+  margin: 20px;
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.5);
@@ -564,7 +571,6 @@
 }
 
 .bustrackcolumn {
-  height: 100%;
   padding-right: 0px;
   padding-left: 0px;
   background-image: url('../images/subway-map.jpg');
@@ -573,9 +579,7 @@
 }
 
 .column {
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 20px;
 }
 
 .column-2 {
@@ -696,6 +700,35 @@
     font-size: 100px;
     line-height: 100px;
     letter-spacing: -10px;
+  }
+
+  .columns {
+    display: block;
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-align: baseline;
+    -webkit-align-items: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+  }
+
+  .column {
+    position: static;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
 }
 
